# python-todo-list

./: .gitignore  README.md  example.env  pyproject.toml  todos.db  todosapp.db
src/: app.py  database.py  dto.py  models.py  router.py
src/database/: db.py
src/dtos/: todos.py  users.py
src/models/: todos.py  users.py
src/routers/: auth.py  todos.py
src/services/: auth.py
